# Omnichannel-Agent-Continuity-Layer

./: LICENSE  README.md  pyproject.toml
src/oac/: __init__.py  cli.py  context.py  gateway_hook.py  identity.py  record.py  smoke.py  state_db_sync.py  synthesize.py
tests/: test_context_command.py  test_gateway_hook_design.py  test_identity_aliases.py  test_irl_cross_channel_smoke.py  test_record_command.py  test_schema_migration.py  test_security_boundaries.py  test_state_db_sync.py  test_synthesize_digest.py
