[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omnichannel-agent-continuity-layer"
version = "0.1.0"
description = "Local-first continuity digest utilities for omnichannel personal agents."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
oac = "oac.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
